--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Specifically, my fields of interest encompass Statistical Learning in Theory and
 	
 		<div class="col float-left">
 		<p>
-		&copy; copyright 2018 <strong>CS Tel-Hai College</strong><br /> 
+		&copy; copyright 2019 <strong>CS Tel-Hai College</strong><br /> 
 		Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
 		Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
 		</p>
@@ -145,4 +145,4 @@ src="http://c.statcounter.com/9323590/0/3eaa9581/1/"
 alt="web analytics"></a></div></noscript>
 <!-- End of StatCounter Code for Default Guide -->
 </body>
-</html>2017_small
+</html>
