--- a/materials.html
+++ b/materials.html
@@ -57,8 +57,9 @@
 	</div>
             <div id="main">	
                
-                    <h1>Presentations and Research Material</h1>
+                    <h1>Research Materials and Presentations </h1>
         <ul>
+		<li> Chen Erlich, Experimental Combinatorial Optimization of Phycobiliproteins' Expression in E.coli. MSc Thesis Tel-Hai College (joint supervision with Dror Noy, 2019): <a href="ChenErlich_MScDissertation_web.pdf" target="_new">dissertation for download</a></li>
 	<li> Mathematical Programming as a Complement to Bio-Inspired Optimization (PPSN'18 tutorial; Coimbra PORTUGAL, September 2018) <a href="IntroMathProg4EC_ppsn2018_ShirOM.pdf" target="_new">pdf</a></li>
 	<li> On the Covariance-Hessian Relation in Evolution Strategies (arXiv preprint with Amir Yehudayoff) <a href="https://arxiv.org/abs/1806.03674" target="_new">pdf</a></li>
 	<li> Introductory mathematical programming for EC (GECCO'18 tutorial; Kyoto JAPAN, July 2018) <a href="https://dl.acm.org/citation.cfm?id=3207871" target="_new">ACM/dL</a> </li>
@@ -93,7 +94,7 @@
 
             <div class="col float-left">
             <p>
-            &copy; copyright 2018 <strong>CS Tel-Hai College</strong><br /> 
+            &copy; copyright 2019 <strong>CS Tel-Hai College</strong><br /> 
             Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
             Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
             </p>
