--- a/publications.html
+++ b/publications.html
@@ -79,8 +79,8 @@ Physical Chemistry Chemical Physics <strong>17</strong>(1) (2015) 334&mdash;347 
             </ol>
 				<h1>Peer-Reviewed Conference Proceedings</h1>
                 <ol start="24" type="1">
-<li> Horesh, N., B&auml;ck, T., Shir, O.M.: Predict or Screen Your Expensive Assay? DoE vs. Surrogates in Experimental Combinatorial Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference, GECCO-2019, New York, NY, USA, ACM Press (2019) 274&ndash;284  </li>
-<li> Israeli, A., Emmerich, M., Litaor, M., Shir, O.M.: Statistical Learning in Soil Sampling Design Aided by Pareto Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference, GECCO-2019, New York, NY, USA, ACM Press (2019) 1198&ndash;1205  </li>
+<li> Horesh, N., B&auml;ck, T., Shir, O.M.: Predict or Screen Your Expensive Assay? DoE vs. Surrogates in Experimental Combinatorial Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference, GECCO-2019, New York, NY, USA, ACM Press (2019) 274&ndash;284  <a href="https://dl.acm.org/citation.cfm?id=3321801" target="_new">pdf</a> </li>
+<li> Israeli, A., Emmerich, M., Litaor, M., Shir, O.M.: Statistical Learning in Soil Sampling Design Aided by Pareto Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference, GECCO-2019, New York, NY, USA, ACM Press (2019) 1198&ndash;1205 <a href="https://dl.acm.org/citation.cfm?id=3321707.3321809" target="_new">pdf</a> </li>
 <li> Calvo, B., Shir, O.M., Ceberio, J., Doerr, C., Wang, H., B&auml;ck, T., Lozano, J.A.: Bayesian Performance Analysis for Black-Box Optimization Benchmarking. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2019, New York, NY, USA, ACM Press (2019) 1789&ndash;1797  </li>
 <li> Doerr, C., Ye, F., Horesh, N., Wang, H., Shir, O.M., B&auml;ck, T.: Benchmarking Discrete Optimization Heuristics with IOHprofiler. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2019, New York, NY, USA, ACM Press (2019) 1798&ndash;1806  </li>
 <li>Shir, O.M., Doerr, C., B&auml;ck, T.: Compiling a benchmarking test-suite for combinatorial black-box optimization: a position paper. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2018, New York, NY, USA, ACM Press (2018) 1753&ndash;1760  </li>
@@ -156,7 +156,7 @@ Physical Chemistry Chemical Physics <strong>17</strong>(1) (2015) 334&mdash;347 
 
             <div class="col float-left">
             <p>
-            &copy; copyright 2018 <strong>CS Tel-Hai College</strong><br /> 
+            &copy; copyright 2019 <strong>CS Tel-Hai College</strong><br /> 
             Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
             Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
             </p>
