--- a/publications.html
+++ b/publications.html
@@ -55,6 +55,7 @@
             </ol>
                 <h1>Journal Articles</h1>
 				<ol start="5" type="1">
+<li>Shir, O.M., Yehudayoff, A.: On the covariance-Hessian relation in evolution strategies. Theoretical Computer Science (2019) <a href="https://doi.org/10.1016/j.tcs.2019.09.002" target="_new">online</a></li>
 <li>Shir, O.M.: Review of "Christian Blum and G&uuml;nther R. Raidl: Hybrid metaheuristics &mdash; powerful tools for optimization". Genetic Programming and Evolvable Machines <strong>19</strong>(1) (2018) 309&mdash;311 <a href="https://doi.org/10.1007/s10710-017-9316-x" target="_new">online</a></li>
 <li>Nanda, V., Belure, S.V., Shir, O.M.: Searching for the Pareto frontier in multi-objective protein design. Biophysical Reviews <strong>9</strong>(4) (2017) 339&mdash;344  <a href="https://doi.org/10.1007/s12551-017-0288-0" target="_new">online</a></li>
 <li>Cohen, H., Shir, O.M., Yu, Y., Hou, W., Sun, S., Han, T., Amir, R.: Genetic background and environmental conditions drive metabolic variation in wild type and transgenic soybean (Glycine max) seeds. Plant, cell &amp; environment <strong>39</strong>(8) (2016) 1805&mdash;1817  </li>
@@ -77,7 +78,7 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
               <li>Siedschlag, C.,       Shir, O.M., B&auml;ck, T., Vrakking, M.J.J.: Evolutionary Algorithms in the       Optimization of Dynamic Molecular Alignment. Optics Communications <strong>264</strong> (2006) 511&ndash;518  </li>
             </ol>
 				<h1>Peer-Reviewed Conference Proceedings</h1>
-                <ol start="24" type="1">
+                <ol start="25" type="1">
 <li> Horesh, N., B&auml;ck, T., Shir, O.M.: Predict or Screen Your Expensive Assay? DoE vs. Surrogates in Experimental Combinatorial Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference, GECCO-2019, New York, NY, USA, ACM Press (2019) 274&ndash;284  <a href="https://dl.acm.org/citation.cfm?id=3321801" target="_new">dl/acm</a> </li>
 <li> Israeli, A., Emmerich, M., Litaor, M., Shir, O.M.: Statistical Learning in Soil Sampling Design Aided by Pareto Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference, GECCO-2019, New York, NY, USA, ACM Press (2019) 1198&ndash;1205 <a href="https://dl.acm.org/citation.cfm?id=3321707.3321809" target="_new">dl/acm</a> </li>
 <li> Calvo, B., Shir, O.M., Ceberio, J., Doerr, C., Wang, H., B&auml;ck, T., Lozano, J.A.: Bayesian Performance Analysis for Black-Box Optimization Benchmarking. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2019, New York, NY, USA, ACM Press (2019) 1789&ndash;1797  </li>
