--- a/publications.html
+++ b/publications.html
@@ -50,12 +50,13 @@
                 <h1>Book Chapters</h1>
                 	<ol start="2" type="1">
     	      <li> Emmerich, M., Shir, O.M., Wang, H.: Evolution Strategies. In: Handbook of Heuristics. Springer International Publishing (2018) <a href="https://link.springer.com/referenceworkentry/10.1007/978-3-319-07153-4_13-1" target="_new">SpringerLink</a></li>
-              <li>Shir, O.M.:       Niching in Evolutionary Algorithms. In: Handbook of Natural Computing:       Theory, Experiments, and Applications. Springer-Verlag, Berlin-Heidelberg,       Germany (2012) 1035&mdash;1069   </li>
-              <li>Shir, O.M.,       B&auml;ck, T.: Niching Methods: Speciation Theory Applied for Multimodal       Function Optimization. In: Algorithmic BioProcesses. Springer-Verlag,       Berlin Heidelberg, Germany (2009) 705&ndash;730  </li>
+              <li>Shir, O.M.: Niching in Evolutionary Algorithms. In: Handbook of Natural Computing: Theory, Experiments, and Applications. Springer-Verlag, Berlin-Heidelberg, Germany (2012) 1035&mdash;1069   </li>
+              <li>Shir, O.M., B&auml;ck, T.: Niching Methods: Speciation Theory Applied for Multimodal Function Optimization. In: Algorithmic BioProcesses. Springer-Verlag, Berlin Heidelberg, Germany(2009) 705&ndash;730  </li>
             </ol>
                 <h1>Journal Articles</h1>
 				<ol start="5" type="1">
-<li>Shir, O.M., Yehudayoff, A.: On the covariance-Hessian relation in evolution strategies. Theoretical Computer Science (2019) <a href="https://doi.org/10.1016/j.tcs.2019.09.002" target="_new">online</a></li>
+<li>Shir, O.M., Yehudayoff, A.: On the covariance-Hessian relation in evolution strategies. Theoretical Computer Science <strong> 801</strong> (2020) 157&mdash;174 <a href="https://doi.org/10.1016/j.tcs.2019.09.002" target="_new">online</a></li>
+<li> Doerr, C., Ye, F., Horesh, N., Wang, H., Shir, O.M., B&auml;ck, T.: Benchmarking Discrete Optimization Heuristics with IOHprofiler. Applied Soft Computing (2019) <a href="https://doi.org/10.1016/j.asoc.2019.106027" target="_new">online</a></li>
 <li>Shir, O.M.: Review of "Christian Blum and G&uuml;nther R. Raidl: Hybrid metaheuristics &mdash; powerful tools for optimization". Genetic Programming and Evolvable Machines <strong>19</strong>(1) (2018) 309&mdash;311 <a href="https://doi.org/10.1007/s10710-017-9316-x" target="_new">online</a></li>
 <li>Nanda, V., Belure, S.V., Shir, O.M.: Searching for the Pareto frontier in multi-objective protein design. Biophysical Reviews <strong>9</strong>(4) (2017) 339&mdash;344  <a href="https://doi.org/10.1007/s12551-017-0288-0" target="_new">online</a></li>
 <li>Cohen, H., Shir, O.M., Yu, Y., Hou, W., Sun, S., Han, T., Amir, R.: Genetic background and environmental conditions drive metabolic variation in wild type and transgenic soybean (Glycine max) seeds. Plant, cell &amp; environment <strong>39</strong>(8) (2016) 1805&mdash;1817  </li>
@@ -74,11 +75,11 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
               <li>Shir, O.M.,       Beltrani, V., B&auml;ck, T., Rabitz, H., Vrakking, M.J.: On the Diversity of       Multiple Optimal Controls for Quantum Systems. Journal of Physics B:       Atomic, Molecular and Optical Physics <strong>41</strong>(7) (2008) 074021  </li>
               <li>Shir, O.M.,       B&auml;ck, T.: Niching with Derandomized Evolution Strategies in Artificial and       Real-World Landscapes. Natural Computing: An International Journal <strong>8</strong>(1)       (2009) 171&ndash;196  </li>
 <li>B&auml;ck, T., Emmerich, M., Shir, O.M.: Evolutionary Algorithms for Real-World Applications [Application Notes]. Computational Intelligence Magazine IEEE <strong>3</strong>(1)       (2008) 64&ndash;67  </li>              
-<li>Shuang, F.,       Zhou, M., Pechen, A., Wu, R., Shir, O.M., Rabitz, H.: Control of Quantum       Dynamics by Optimized Measurements. Physical Review A (Atomic, Molecular,       and Optical Physics) <strong>78</strong>(6) (2008) 063422  </li>
-              <li>Siedschlag, C.,       Shir, O.M., B&auml;ck, T., Vrakking, M.J.J.: Evolutionary Algorithms in the       Optimization of Dynamic Molecular Alignment. Optics Communications <strong>264</strong> (2006) 511&ndash;518  </li>
+<li>Shuang, F., Zhou, M., Pechen, A., Wu, R., Shir, O.M., Rabitz, H.: Control of Quantum       Dynamics by Optimized Measurements. Physical Review A (Atomic, Molecular,       and Optical Physics) <strong>78</strong>(6) (2008) 063422  </li>
+              <li>Siedschlag, C., Shir, O.M., B&auml;ck, T., Vrakking, M.J.J.: Evolutionary Algorithms in the Optimization of Dynamic Molecular Alignment. Optics Communications <strong>264</strong> (2006) 511&ndash;518  </li>
             </ol>
 				<h1>Peer-Reviewed Conference Proceedings</h1>
-                <ol start="25" type="1">
+                <ol start="26" type="1">
 <li> Horesh, N., B&auml;ck, T., Shir, O.M.: Predict or Screen Your Expensive Assay? DoE vs. Surrogates in Experimental Combinatorial Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference, GECCO-2019, New York, NY, USA, ACM Press (2019) 274&ndash;284  <a href="https://dl.acm.org/citation.cfm?id=3321801" target="_new">dl/acm</a> </li>
 <li> Israeli, A., Emmerich, M., Litaor, M., Shir, O.M.: Statistical Learning in Soil Sampling Design Aided by Pareto Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference, GECCO-2019, New York, NY, USA, ACM Press (2019) 1198&ndash;1205 <a href="https://dl.acm.org/citation.cfm?id=3321707.3321809" target="_new">dl/acm</a> </li>
 <li> Calvo, B., Shir, O.M., Ceberio, J., Doerr, C., Wang, H., B&auml;ck, T., Lozano, J.A.: Bayesian Performance Analysis for Black-Box Optimization Benchmarking. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2019, New York, NY, USA, ACM Press (2019) 1789&ndash;1797  </li>
