--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 		</ul>
             <h1> contact details</h1>
             <ul>					
-                <li><label> electronic mail: </label><a href= "mailto:ofersh@telhai.ac.il">ofersh@telhai.ac.il </a></li>
-                <li><label>postal address:</label> Computer Science Dept., Bld. 7, Western Campus, Tel-Hai College, Upper Galilee 1220800, ISRAEL</li>							
+                <li><label>electronic mail: </label><a href= "mailto:ofersh@telhai.ac.il">ofersh@telhai.ac.il </a></li>
+                <li><label>physical address:</label> Computer Science Dept., Room 304 Bld. 7, Western Campus, Tel-Hai College, Upper Galilee 1220800, ISRAEL</li>							
 				</ul>	    
             </div>
 							
@@ -65,8 +65,8 @@
 	                <p>I am interested in learning and optimization questions related to systems within the Natural Sciences. 
 Specifically, my fields of interest encompass Statistical Learning in Theory and in Practice, Experimental Optimization, Theory of Randomized Search Heuristics, Scientific Informatics, Natural Computing, Computational Intelligence in Physical Sciences, Quantum Control and Quantum Machine Learning. <br><br>
             <b>Currently:</b> <br>
-            Senior Lecturer (Assistant Professor), <strong><a href="http://cs.telhai.ac.il/" target="_new">Department of Computer Science, Tel-Hai College</a></strong>.<br>
-            Principal Investigator, Computational Sciences, <strong><a href="http://www.migal.org.il/" target="_new">Migal-The Galilee Research Institute</a></strong>.
+            Head, <strong>Department of Computer Science, Tel-Hai College</strong>.<br>
+            Principal Investigator, Computational Intelligence Group, <strong><a href="http://www.migal.org.il/" target="_new">Migal-The Galilee Research Institute</a></strong>.
                         <br><br>
 		<b> Previously: </b>
 <ul>
