--- a/materials.html
+++ b/materials.html
@@ -60,6 +60,7 @@
                
                     <h1>Research Materials and Presentations </h1>
         <ul>
+		<li> Assaf Israeli, Multiobjective Optimization of Soil Sampling Design Using Information Metrics. MSc Thesis Tel-Hai College (joint supervision with Iggy Litaor, 2020): <a href="AssafIsraeli_MScDissertation_web.pdf" target="_new">dissertation for download</a></li>
 		<li> Chen Erlich, Experimental Combinatorial Optimization of Phycobiliproteins' Expression in E.coli. MSc Thesis Tel-Hai College (joint supervision with Dror Noy, 2019): <a href="ChenErlich_MScDissertation_web.pdf" target="_new">dissertation for download</a></li>
 	<li> Mathematical Programming as a Complement to Bio-Inspired Optimization (PPSN'18 tutorial; Coimbra PORTUGAL, September 2018) <a href="IntroMathProg4EC_ppsn2018_ShirOM.pdf" target="_new">pdf</a></li>
 	<li> On the Covariance-Hessian Relation in Evolution Strategies (arXiv preprint with Amir Yehudayoff) <a href="https://arxiv.org/abs/1806.03674" target="_new">pdf</a></li>
