--- a/publications.html
+++ b/publications.html
@@ -56,6 +56,7 @@
                 <h1>Journal Articles</h1>
 				<ol start="5" type="1">
 <li>Shir, O.M., Yehudayoff, A.: On the covariance-Hessian relation in evolution strategies. Theoretical Computer Science <strong> 801</strong> (2020) 157&mdash;174 <a href="https://doi.org/10.1016/j.tcs.2019.09.002" target="_new">online</a></li>
+<li>Liran, O., Shir, O.M., Levy, S., Grunfeld, A., Shelly, Y.: Novel Remote Sensing Index of Electron Transport Rate Predicts Primary Production and Crop Health in L. sativa and Z. mays. Remote Sensing <strong> 12 </strong> (2020) 1718 <a href="https://www.mdpi.com/2072-4292/12/11/1718" target="_new">online</a></li>
 <li> Doerr, C., Ye, F., Horesh, N., Wang, H., Shir, O.M., B&auml;ck, T.: Benchmarking Discrete Optimization Heuristics with IOHprofiler. Applied Soft Computing (2019) <a href="https://doi.org/10.1016/j.asoc.2019.106027" target="_new">online</a></li>
 <li>Shir, O.M.: Review of "Christian Blum and G&uuml;nther R. Raidl: Hybrid metaheuristics &mdash; powerful tools for optimization". Genetic Programming and Evolvable Machines <strong>19</strong>(1) (2018) 309&mdash;311 <a href="https://doi.org/10.1007/s10710-017-9316-x" target="_new">online</a></li>
 <li>Nanda, V., Belure, S.V., Shir, O.M.: Searching for the Pareto frontier in multi-objective protein design. Biophysical Reviews <strong>9</strong>(4) (2017) 339&mdash;344  <a href="https://doi.org/10.1007/s12551-017-0288-0" target="_new">online</a></li>
@@ -79,7 +80,7 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
               <li>Siedschlag, C., Shir, O.M., B&auml;ck, T., Vrakking, M.J.J.: Evolutionary Algorithms in the Optimization of Dynamic Molecular Alignment. Optics Communications <strong>264</strong> (2006) 511&ndash;518  </li>
             </ol>
 				<h1>Peer-Reviewed Conference Proceedings</h1>
-                <ol start="26" type="1">
+                <ol start="27" type="1">
 <li> Horesh, N., B&auml;ck, T., Shir, O.M.: Predict or Screen Your Expensive Assay? DoE vs. Surrogates in Experimental Combinatorial Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference, GECCO-2019, New York, NY, USA, ACM Press (2019) 274&ndash;284  <a href="https://dl.acm.org/citation.cfm?id=3321801" target="_new">dl/acm</a> </li>
 <li> Israeli, A., Emmerich, M., Litaor, M., Shir, O.M.: Statistical Learning in Soil Sampling Design Aided by Pareto Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference, GECCO-2019, New York, NY, USA, ACM Press (2019) 1198&ndash;1205 <a href="https://dl.acm.org/citation.cfm?id=3321707.3321809" target="_new">dl/acm</a> </li>
 <li> Calvo, B., Shir, O.M., Ceberio, J., Doerr, C., Wang, H., B&auml;ck, T., Lozano, J.A.: Bayesian Performance Analysis for Black-Box Optimization Benchmarking. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2019, New York, NY, USA, ACM Press (2019) 1789&ndash;1797  </li>
@@ -120,10 +121,10 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
             </ol>
                 <h1>Patents</h1>
                 <ul>
+			<li>Multi objective design selection. U.S. Patent Number <strong>US10546249</strong> B2, granted Jan 28, 2020 <a href="./patents/US10546249.pdf" target="_new">pdf</a> </li> 
  	      <li>Leak detection in a fluid distribution network. U.S. Patent Number <strong>US8930150</strong> B2, granted Jan 6, 2015 <a href="./patents/US8930150.pdf" target="_new">pdf</a> (app. ref.: 2013/0197833 A1) </li>
 	      <li>Self organizing maps for visualizing an objective space. U.S. Patent Number <strong>US9104963</strong> B2, granted Aug 11, 2015 <a href="./patents/US9104963.pdf" target="_new">pdf</a> </li>
-	      <li>Multi objective design selection. U.S. Patent Number <strong>US9299032</strong> B2, granted March 29, 2016 <a href="./patents/US9299032B2.pdf" target="_new">pdf</a> </li>
- 	<li>Objective weighing and ranking. U.S. Patent Number <strong>US9305266</strong> B2, granted Apr 5, 2016 <a href="./patents/US9305266B2.pdf" target="_new">pdf</a> </li>
+	      <li>Objective weighing and ranking. U.S. Patent Number <strong>US9305266</strong> B2, granted Apr 5, 2016 <a href="./patents/US9305266B2.pdf" target="_new">pdf</a> </li>
          	<li>Automated multi-objective solution selection. U.S. Patent Number <strong>US9524466</strong> B2, granted Dec 20, 2016 <a href="./patents/US9524466B2.pdf" target="_new">pdf</a> </li>
     <li>Identifying a highly diverse set of multi objective designs. U.S. Patent Number US 2013/0218526 A1, pub. Aug 22, 2013 <a href="./patents/US20130218526.pdf" target="_new">pdf</a> </li>
 	      <li>Sensor placement for leakage location in liquid distribution networks. U.S. Patent Number US 2013/0262068 A1, issued Oct 3, 2013 <a href="./patents/US20130262068.pdf" target="_new">pdf </a> </li>
