--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <link rel="stylesheet" href="images/PixelGreen.css" type="text/css" />
 
-<title>Dr. Ofer M. Shir</title>
+<title>Prof. Ofer M. Shir</title>
 	
 </head>
 
@@ -23,7 +23,7 @@
 	<div id="header"><div id="header-content">	
 		
 		<h1 id="logo"><a href="index.html" title=""><span class="gray">Ofer M. Shir</span></a></h1>	
-		<h2 id="slogan">Senior Lecturer, Department of Computer Science, Tel-Hai College</h2>		
+		<h2 id="slogan">Associate Professor, Computer Science Department, Tel-Hai College</h2>		
 		
 		<!-- Menu Tabs -->
 		<ul>
@@ -40,14 +40,14 @@
 	<!-- content-wrap starts here -->
 	<div id="content-wrap"><div id="content">		
 	<!--div class="headerphoto"></div-->
-		<img src="./images/headerphoto.JPG" width=520px alt="Dr. Ofer M. Shir">
+		<img src="./images/headerphoto.JPG" width=520px alt="Prof. Ofer M. Shir">
 			
 		<!--div style="clear:both;"></div-->
         <div id="sidebar" >
 		    <div class="sidebox">  
             <h1> alma mater</h1>
 		<ul>
-                <a href="http://www.huji.ac.il/" target="_new">Hebrew University of Jerusalem (03)</a>,
+                <a href="https://new.huji.ac.il/" target="_new">Hebrew University of Jerusalem (03)</a>,
 		<a href="https://www.universiteitleiden.nl/en/" target="_new">Leiden University (04*,08*)</a>,
 		<a href="https://www.princeton.edu/" target="_new">Princeton University (08*)</a>
 		</ul>
@@ -70,11 +70,11 @@ Specifically, my fields of interest encompass Statistical Learning in Theory and
                         <br><br>
 		<b> Previously: </b>
 <ul>
-        <li> <span style="font-family:'Arial','sans-serif'; ">Lecturer, <strong><a href="http://cs.telhai.ac.il/" target="_new">Department of Computer Science, Tel-Hai College</a></strong>.</span></li>
+        <li> <span style="font-family:'Arial','sans-serif'; ">Senior Lecturer, <strong><a href="http://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.</span></li>
 	<li> <span style="font-family:'Arial','sans-serif'; ">Research Scientist, <strong><a href="http://www.research.ibm.com/" target="_new">IBM-Research</a></strong>.</span></li>
         <li> <span style="font-family:'Arial','sans-serif'; ">Postdoctoral Research Associate, <strong><a href="http://www.princeton.edu/" target="_new">Princeton University</a></strong>. Host: <a href="https://www.princeton.edu/chemistry/rabitz/" target="_new">Hersch Rabitz</a>.</span></li>
         <li> <span style="font-family:'Arial','sans-serif'; ">MSc and PhD in Computer Science, <strong><a href="http://www.leiden.edu/" target="_new">Leiden University</a></strong>. Advisors: <a href="http://natcomp.liacs.nl/" target="_new">Thomas B&auml;ck</a> and <a href="http://staff.mbi-berlin.de/vrakking/" target="_new">Marc Vrakking</a>.</span></li>
-        <li> <span style="font-family:'Arial','sans-serif'; "> BSc in Physics and Computer Science, <strong><a href="http://www.huji.ac.il/" target="_new">Hebrew University of Jerusalem</a></strong>.</span></li>
+        <li> <span style="font-family:'Arial','sans-serif'; "> BSc in Physics and Computer Science, <strong><a href="https://new.huji.ac.il/" target="_new">Hebrew University of Jerusalem</a></strong>.</span></li>
       </ul> <br>
             <b>Teaching</b>:
             <ul>
@@ -115,7 +115,7 @@ Specifically, my fields of interest encompass Statistical Learning in Theory and
 	
 		<div class="col float-left">
 		<p>
-		&copy; copyright 2019 <strong>CS Tel-Hai College</strong><br /> 
+		&copy; copyright 2020 <strong>CS Tel-Hai College</strong><br /> 
 		Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
 		Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
 		</p>
