--- a/materials.html
+++ b/materials.html
@@ -12,7 +12,7 @@
 
 <link rel="stylesheet" href="images/PixelGreen.css" type="text/css" />
 
-<title>Research Materials, Dr. Ofer M. Shir</title>
+<title>Research Materials, Prof. Ofer M. Shir</title>
 	
 </head>
 
@@ -24,7 +24,7 @@
         <div id="header"><div id="header-content">	
 
             		<h1 id="logo"><a href="index.html" title=""><span class="gray">Ofer M. Shir </a></h1>	
-		<h2 id="slogan">Senior Lecturer, Department of Computer Science, Tel-Hai College</h2>		
+		<h2 id="slogan">Associate Professor, Computer Science Department, Tel-Hai College</h2>		
 		
 		<!-- Menu Tabs -->
 		<ul>
@@ -41,7 +41,7 @@
 
         <!-- content-wrap starts here -->
         <div id="content-wrap"><div id="content">		
-<img src="./images/IMG_3364.png" width=520px alt="Dr. Ofer M. Shir">
+<img src="./images/IMG_3364.png" width=520px alt="Prof. Ofer M. Shir">
 		<div id="sidebar" >
 		    <div class="sidebox">  
             <h1> social web</h1>
@@ -98,7 +98,7 @@
 
             <div class="col float-left">
             <p>
-            &copy; copyright 2019 <strong>CS Tel-Hai College</strong><br /> 
+            &copy; copyright 2020 <strong>CS Tel-Hai College</strong><br /> 
             Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
             Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
             </p>
