--- a/publications.html
+++ b/publications.html
@@ -12,7 +12,7 @@
 
 <link rel="stylesheet" href="images/PixelGreen.css" type="text/css" />
 
-<title>Publications of Dr. Ofer M. Shir</title>
+<title>Publications of Prof. Ofer M. Shir</title>
 	
 </head>
 
@@ -23,7 +23,7 @@
         <div id="header"><div id="header-content">	
 
             		<h1 id="logo"><a href="index.html" title=""><span class="gray">Ofer M. Shir </a></h1>	
-		<h2 id="slogan">Senior Lecturer, Department of Computer Science, Tel-Hai College</h2>		
+		<h2 id="slogan">Associate Professor, Computer Science Department, Tel-Hai College</h2>		
 		
 		<!-- Menu Tabs -->
 		<ul>
@@ -81,6 +81,7 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
             </ol>
 				<h1>Peer-Reviewed Conference Proceedings</h1>
                 <ol start="27" type="1">
+<li> Kocaman, V., Shir, O.M., B&auml;ck, T.: Improving Model Accuracy for Imbalanced Image Classification Tasks by Adding a Final Batch Normalization Layer: An Empirical Study. To Appear In: Proceedings 25th International Conference on Pattern Recognition, ICPR2020 (2021). </li>
 <li> Horesh, N., B&auml;ck, T., Shir, O.M.: Predict or Screen Your Expensive Assay? DoE vs. Surrogates in Experimental Combinatorial Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference, GECCO-2019, New York, NY, USA, ACM Press (2019) 274&ndash;284  <a href="https://dl.acm.org/citation.cfm?id=3321801" target="_new">dl/acm</a> </li>
 <li> Israeli, A., Emmerich, M., Litaor, M., Shir, O.M.: Statistical Learning in Soil Sampling Design Aided by Pareto Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference, GECCO-2019, New York, NY, USA, ACM Press (2019) 1198&ndash;1205 <a href="https://dl.acm.org/citation.cfm?id=3321707.3321809" target="_new">dl/acm</a> </li>
 <li> Calvo, B., Shir, O.M., Ceberio, J., Doerr, C., Wang, H., B&auml;ck, T., Lozano, J.A.: Bayesian Performance Analysis for Black-Box Optimization Benchmarking. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2019, New York, NY, USA, ACM Press (2019) 1789&ndash;1797  </li>
@@ -158,7 +159,7 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
 
             <div class="col float-left">
             <p>
-            &copy; copyright 2019 <strong>CS Tel-Hai College</strong><br /> 
+            &copy; copyright 2020 <strong>CS Tel-Hai College</strong><br /> 
             Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
             Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
             </p>
