--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	                <p>I am interested in learning and optimization questions related to systems within the Natural Sciences. 
 Specifically, my fields of interest encompass Statistical Learning in Theory and in Practice, Experimental Optimization, Theory of Randomized Search Heuristics, Scientific Informatics, Natural Computing, Computational Intelligence in Physical Sciences, Quantum Control and Quantum Machine Learning. <br><br>
             <b>Currently:</b> <br>
-            Head, <strong>Department of Computer Science, Tel-Hai College</strong>.<br>
+            Head, <strong>Computer Science Department, Tel-Hai College</strong>.<br>
             Principal Investigator, Computational Intelligence Group, <strong><a href="http://www.migal.org.il/" target="_new">Migal-The Galilee Research Institute</a></strong>.
                         <br><br>
 		<b> Previously: </b>
