--- a/materials.html
+++ b/materials.html
@@ -47,7 +47,7 @@
             <h1> social web</h1>
             <ul>					
 				<li><label> <a href= "http://orcid.org/0000-0002-8257-5160" target="_new">ORCID </a></label></li>
-                <li><label> <a href= "https://il.linkedin.com/in/ofer-shir-phd-2ba2a91" target="_new">LinkedIn </a></label></li>
+                <li><label> <a href= "https://linkedin.com/in/ofer-shir-2ba2a91" target="_new">LinkedIn </a></label></li>
                 <li><label> <a href= "https://scholar.google.co.il/citations?user=ZGlwR1EAAAAJ&hl=en" target="_new">Google Scholar </a></label></li>							
 				<li><label> <a href= "https://dl.acm.org/author_page.cfm?id=81100165304" target="_new">ACM's Digital Library </a></label></li>
 				</ul>	    
