--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Specifically, my fields of interest encompass Statistical Learning in Theory and
       </ul><br>
 	  <b> Algorithmically-Guided Scientific Discoveries (Migal's TED Talk, 2021):</b>
 	  <br>
-	<iframe width="440" src="https://www.youtube.com/embed/u3L87LVFhX4"></iframe>
+	<iframe src="https://www.youtube.com/embed/u3L87LVFhX4"></iframe>
 	<br><br><br>
 	<b> Series of lectures on Evolutionary Computation (in Hebrew; taught in 199811 Fall 17-18):</b><br>
 	<iframe width="220" src="https://www.youtube.com/embed/fcwXTRtT8sM"></iframe>
