--- a/index.html
+++ b/index.html
@@ -65,16 +65,17 @@
 	                <p>I am interested in learning and optimization questions related to systems within the Natural Sciences. 
 Specifically, my fields of interest encompass Statistical Learning in Theory and in Practice, Experimental Optimization, Theory of Randomized Search Heuristics, Scientific Informatics, Natural Computing, Computational Intelligence in Physical Sciences, Quantum Control and Quantum Machine Learning. <br><br>
             <b>Currently:</b> <br>
-            Head, <strong>Computer Science Department, Tel-Hai College</strong>.<br>
-            Principal Investigator, Computational Intelligence Group, <strong><a href="http://www.migal.org.il/" target="_new">Migal-The Galilee Research Institute</a></strong>.
+            Head, <strong><a href="https://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.<br>
+            Principal Investigator, Computational Intelligence Group, <strong><a href="https://www.migal.org.il/en/computational-intelligence" target="_new">Migal-The Galilee Research Institute</a></strong>.
                         <br><br>
 		<b> Previously: </b>
 <ul>
-        <li> <span style="font-family:'Arial','sans-serif'; ">Senior Lecturer, <strong><a href="http://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.</span></li>
-	<li> <span style="font-family:'Arial','sans-serif'; ">Research Scientist, <strong><a href="http://www.research.ibm.com/" target="_new">IBM-Research</a></strong>.</span></li>
-        <li> <span style="font-family:'Arial','sans-serif'; ">Postdoctoral Research Associate, <strong><a href="http://www.princeton.edu/" target="_new">Princeton University</a></strong>. Host: <a href="https://www.princeton.edu/chemistry/rabitz/" target="_new">Hersch Rabitz</a>.</span></li>
-        <li> <span style="font-family:'Arial','sans-serif'; ">MSc and PhD in Computer Science, <strong><a href="http://www.leiden.edu/" target="_new">Leiden University</a></strong>. Advisors: <a href="http://natcomp.liacs.nl/" target="_new">Thomas B&auml;ck</a> and <a href="http://staff.mbi-berlin.de/vrakking/" target="_new">Marc Vrakking</a>.</span></li>
-        <li> <span style="font-family:'Arial','sans-serif'; "> BSc in Physics and Computer Science, <strong><a href="https://new.huji.ac.il/" target="_new">Hebrew University of Jerusalem</a></strong>.</span></li>
+        <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Senior Lecturer, <strong><a href="http://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.</span></li>
+	<li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Research Scientist, <strong><a href="http://www.research.ibm.com/" target="_new">IBM-Research</a></strong>.</span></li>
+        <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Postdoctoral Research Associate, <strong><a href="http://www.princeton.edu/" target="_new">Princeton University</a></strong>. Host: <a href="https://www.princeton.edu/chemistry/rabitz/" target="_new">Hersch Rabitz</a>.</span></li>
+        <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">MSc and PhD in Computer Science, <strong><a href="http://www.leiden.edu/" target="_new">Leiden University</a></strong>. Advisors: <a href="http://natcomp.liacs.nl/" target="_new">Thomas B&auml;ck</a> and <a href="http://staff.mbi-berlin.de/vrakking/" target="_new">Marc Vrakking</a>.</span></li>
+        <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px"> BSc in Physics and Computer Science, <strong><a href="https://new.huji.ac.il/" target="_new">Hebrew University of Jerusalem</a></strong>.</span></li>
+        <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px"> BSc in Physics and Computer Science, <strong><a href="https://new.huji.ac.il/" target="_new">Hebrew University of Jerusalem</a></strong>.</span></li>
       </ul> <br>
             <b>Teaching</b>:
             <ul>
@@ -83,7 +84,7 @@ Specifically, my fields of interest encompass Statistical Learning in Theory and
               <li> Introduction to Computational Intelligence (199811; Fall)</li>
 	      <li> Advanced Topics in Object-Oriented Programming (199414; Spring)</li>
       </ul><br>
-	  <b> Algorithmically-Guided Scientific Discoveries (Migal's TED Talk, 2021):</b>
+	  <b> Algorithmically-Guided Scientific Discoveries (Migal's Talk, 2021):</b>
 	  <br>
 	<iframe src="https://www.youtube.com/embed/u3L87LVFhX4"></iframe>
 	<br><br><br>
