--- a/materials.html
+++ b/materials.html
@@ -69,6 +69,7 @@
 	<li> On the Statistical Learning Ability of Evolution Strategies (Foundations of Genetic Algorithms Workshop FOGA-XIV, January 2017) <a href="Shir-Yehudayoff_FOGA2017copenhagen15012017.pdf" target="_new">pdf</a></li>
       <li> Computational Intelligence in the Natural Sciences: Machine Learning, Optimization, and Heuristic Search (Princeton University Seminar, July 2016) <a href="Shir_PrincetonColloquium-July2016.pdf" target="_new">pdf</a></li>
 	  <li> Pareto Automated Recommendation (LIACS Colloquium, Dec. 2014) <a href="MORecommendation.pdf" target="_new">pdf</a></li>
+	  <li> On Parameterizations and Randomized Search Heuristics in Computationally-Expensive Quantum Control Simulations <a href="oshir_DES-QC.pdf" target="_new">pdf</a></li>
 	 <li> Doctoral Thesis: <a href="OferMichaelShir_PhDmanuscript.pdf" target="_new">manuscript for download</a></li>
      </ul>
             <h1>Links</h1>
